fix: minor icon bg fix in dark mode

--- a/server-core/src/main/java/io/onedev/server/web/page/simple/simple.css
+++ b/server-core/src/main/java/io/onedev/server/web/page/simple/simple.css
@@ -100,6 +100,9 @@
 	top: 1rem;
 	background: var(--light);
 }
+.SimplePage.dark-mode .main .error-detail+.copy {
+	background: #323248;
+}
 
 .PageNotFoundErrorPage h3 {
 	font-size: 3rem;
